--- a/MemoryManagement/memory.conf
+++ b/MemoryManagement/memory.conf
@@ -1,37 +1,55 @@
 // memset  virt page #  physical page #  R (read from)  M (modified) inMemTime (ns) lastTouchTime (ns)
 
-memset 0 0 0 0 0 0      
-memset 1 1 0 0 0 0      
-memset 2 2 0 0 0 0      
-memset 3 3 0 0 0 0      
-memset 4 4 0 0 0 0      
-memset 5 5 0 0 0 0      
-memset 6 6 0 0 0 0      
-memset 7 7 0 0 0 0      
-memset 8 8 0 0 0 0      
-memset 9 9 0 0 0 0      
-memset 10 10 0 0 0 0            
-memset 11 11 0 0 0 0            
-memset 12 12 0 0 0 0            
-memset 13 13 0 0 0 0            
-memset 14 14 0 0 0 0            
-memset 15 15 0 0 0 0            
-memset 16 16 0 0 0 0            
-memset 17 17 0 0 0 0            
-memset 18 18 0 0 0 0            
-memset 19 19 0 0 0 0            
-memset 20 20 0 0 0 0            
-memset 21 21 0 0 0 0            
-memset 22 22 0 0 0 0            
-memset 23 23 0 0 0 0            
-memset 24 24 0 0 0 0            
-memset 25 25 0 0 0 0            
-memset 26 26 0 0 0 0            
-memset 27 27 0 0 0 0            
-memset 28 28 0 0 0 0            
-memset 29 29 0 0 0 0            
-memset 30 30 0 0 0 0              
-memset 31 31 0 0 0 0          
+//memset 0 0 0 0 0 0      
+//memset 1 1 0 0 0 0      
+//memset 2 2 0 0 0 0      
+//memset 3 3 0 0 0 0      
+//memset 4 4 0 0 0 0      
+//memset 5 5 0 0 0 0      
+//memset 6 6 0 0 0 0      
+//memset 7 7 0 0 0 0      
+//memset 8 8 0 0 0 0      
+//memset 9 9 0 0 0 0      
+//memset 10 10 0 0 0 0            
+//memset 11 11 0 0 0 0            
+//memset 12 12 0 0 0 0            
+//memset 13 13 0 0 0 0            
+//memset 14 14 0 0 0 0            
+//memset 15 15 0 0 0 0            
+//memset 16 16 0 0 0 0            
+//memset 17 17 0 0 0 0            
+//memset 18 18 0 0 0 0            
+//memset 19 19 0 0 0 0            
+//memset 20 20 0 0 0 0            
+//memset 21 21 0 0 0 0            
+//memset 22 22 0 0 0 0            
+//memset 23 23 0 0 0 0            
+//memset 24 24 0 0 0 0            
+//memset 25 25 0 0 0 0            
+//memset 26 26 0 0 0 0            
+//memset 27 27 0 0 0 0            
+//memset 28 28 0 0 0 0            
+//memset 29 29 0 0 0 0            
+//memset 30 30 0 0 0 0              
+//memset 31 31 0 0 0 0    
+
+
+memset 46 16 0 0 0 0            
+memset 47 17 0 0 0 0            
+memset 48 18 0 0 0 0            
+memset 49 19 0 0 0 0            
+memset 50 20 0 0 0 0            
+memset 51 21 0 0 0 0            
+memset 52 22 0 0 0 0            
+memset 53 23 0 0 0 0            
+memset 54 24 0 0 0 0            
+memset 55 25 0 0 0 0            
+memset 56 26 0 0 0 0            
+memset 57 27 0 0 0 0            
+memset 58 28 0 0 0 0            
+memset 59 29 0 0 0 0            
+memset 60 30 0 0 0 0              
+memset 61 31 0 0 0 0          
 
 // enable_logging 'true' or 'false'
 // When true specify a log_file or leave blank for stdout
